# afs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/afs-agentfs/: Cargo.toml
crates/afs-agentfs/src/: lib.rs
crates/afs-agentfs/tests/: import.rs
crates/afs-api/: Cargo.toml
crates/afs-api/src/: lib.rs
crates/afs-api/tests/: api.rs
crates/afs-cli/: Cargo.toml
crates/afs-cli/src/: main.rs
crates/afs-core/: Cargo.toml
crates/afs-core/benches/: engine.rs
crates/afs-core/src/: attribution.rs  chunk.rs  clock.rs  collab.rs  content.rs  encrypt.rs  engine.rs  error.rs  gc.rs  interop.rs  lib.rs  merge.rs  metadata.rs  migrations.rs  objectgraph.rs  objectstore.rs  pack.rs  postgres.rs  recover.rs  sqlite.rs  suggest.rs  util.rs  version.rs  vfs.rs
crates/afs-core/tests/: attribution.rs  chunking.rs  collab.rs  concurrency.rs  content_backends.rs  durability.rs  encryption.rs  gc.rs  hardening.rs  integrity.rs  merge.rs  pack.rs  postgres.rs  recover.rs  roundtrip.rs  simulation.rs  streaming.rs  transactions.rs  versioning.rs
crates/afs-fuse/: Cargo.toml
crates/afs-fuse/src/: lib.rs
crates/afs-fuse/tests/: mount.rs
crates/afs-git/: Cargo.toml
crates/afs-git/src/: export.rs  import.rs  lib.rs  object.rs
crates/afs-git/tests/: interop.rs  remote.rs
crates/afs-mcp/: Cargo.toml
crates/afs-mcp/src/: lib.rs
crates/afs-mcp/tests/: mcp.rs
crates/afs-nfs/: Cargo.toml
crates/afs-nfs/src/: lib.rs
crates/afs-nfs/tests/: nfs.rs
crates/afs-py/: Cargo.toml  README.md  afs.pyi  pyproject.toml
crates/afs-py/examples/: collab_app.py  fastapi_app.py  fastapi_router.py
crates/afs-py/python/afs/: __init__.py  __init__.pyi  fastapi.py  overlay.py
crates/afs-py/src/: lib.rs
crates/afs-py/tests/: test_actors.py  test_bindings.py  test_fastapi_router.py  test_object_store.py  test_overlay.py  test_recover.py  test_subscribe.py
crates/afs-remote-git/: Cargo.toml
crates/afs-review/: Cargo.toml
crates/afs-review/src/: diff.rs  docx.rs  lib.rs  model.rs  opc.rs  pptx.rs  xlsx.rs  xmlutil.rs
crates/afs-review/tests/: review.rs
crates/afs-sandbox/: Cargo.toml
crates/afs-sandbox/src/: lib.rs
crates/afs-sandbox/tests/: sandbox.rs
crates/afs-sdk/: Cargo.toml
crates/afs-sdk/src/: lib.rs
crates/afs-sdk/tests/: collab.rs  diff.rs  encrypt.rs  migrations.rs  pack.rs  recover.rs  subscribe.rs  suggest.rs
crates/origo-api/: Cargo.toml
crates/origo-api/src/: lib.rs
crates/origo-api/tests/: api.rs
crates/origo-cli/: Cargo.toml
crates/origo-cli/src/: main.rs
crates/origo-core/: Cargo.toml
crates/origo-core/benches/: engine.rs
crates/origo-core/src/: attribution.rs  chunk.rs  collab.rs  content.rs  encrypt.rs  engine.rs  error.rs  gc.rs  interop.rs  lib.rs  merge.rs  migrations.rs  objectgraph.rs  objectstore.rs  pack.rs  postgres.rs  recover.rs  sqlite.rs  suggest.rs  types.rs  version.rs  vfs.rs
crates/origo-core/tests/: attribution.rs  chunking.rs  collab.rs  concurrency.rs  content_backends.rs  durability.rs  encryption.rs  gc.rs  hardening.rs  integrity.rs  merge.rs  pack.rs  postgres.rs  recover.rs  roundtrip.rs  simulation.rs  streaming.rs  transactions.rs  versioning.rs
crates/origo-fuse/: Cargo.toml
crates/origo-fuse/src/: lib.rs
crates/origo-fuse/tests/: mount.rs
crates/origo-git/: Cargo.toml
crates/origo-git/src/: export.rs  import.rs  lib.rs  object.rs
crates/origo-git/tests/: interop.rs  remote.rs
crates/origo-mcp/: Cargo.toml
crates/origo-mcp/src/: lib.rs
crates/origo-mcp/tests/: mcp.rs
crates/origo-nfs/: Cargo.toml
crates/origo-nfs/src/: lib.rs
crates/origo-nfs/tests/: nfs.rs
crates/origo-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/origo-py/examples/: collab_app.py  fastapi_app.py  fastapi_router.py
crates/origo-py/python/origo/: __init__.py  __init__.pyi  fastapi.py  overlay.py
crates/origo-py/src/: lib.rs
crates/origo-py/tests/: test_actors.py  test_bindings.py  test_fastapi_router.py  test_object_store.py  test_overlay.py  test_recover.py  test_subscribe.py
crates/origo-sandbox/: Cargo.toml
crates/origo-sandbox/src/: lib.rs
crates/origo-sandbox/tests/: sandbox.rs
crates/origo-sdk/: Cargo.toml
crates/origo-sdk/src/: lib.rs
crates/origo-sdk/tests/: collab.rs  diff.rs  encrypt.rs  migrations.rs  pack.rs  recover.rs  subscribe.rs  suggest.rs
docs/: DESIGN.md
docs/proposals/: office-suggestion-review.md
examples/web/: .gitignore  README.md
examples/web/app/: index.html  package-lock.json  package.json  vite.config.ts
examples/web/app/src/: App.tsx  session.tsx  styles.css
examples/web/app/src/components/: ActorBadge.tsx
examples/web/app/src/doc/: useDocument.ts
examples/web/app/src/editor/: AttributionGutter.tsx  BlameView.tsx  EditPane.tsx  Editor.tsx  InlineBlameAnnotation.tsx  attributionPlugin.tsx  plugins.ts
examples/web/app/src/lib/: afsClient.ts  blame.ts  colors.ts  origoClient.ts  time.ts  types.ts
examples/web/app/src/panels/: ActivityFeed.tsx  DiffText.tsx  HistoryPanel.tsx  SuggestionsPanel.tsx
examples/web/app/src/review/: ReviewOverlay.tsx  buildSuggestionValue.ts  prose.tsx  suggestionPlugins.tsx
examples/web/server/: app.py  requirements.txt  test_app.py
