[package]
name = "afs-agentfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-core = { version = "0.1.0", path = "../afs-core" }
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
async-recursion = "1.1.1"
# Match afs-core's rusqlite exactly so only one libsqlite3-sys is linked.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
