[package]
name = "afs-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "afs"
path = "src/main.rs"

[dependencies]
afs-fuse = { version = "0.0.0", path = "../afs-fuse" }
afs-git = { version = "0.0.0", path = "../afs-git" }
afs-mcp = { version = "0.0.0", path = "../afs-mcp" }
afs-sandbox = { version = "0.0.0", path = "../afs-sandbox" }
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
