[package]
name = "afs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
fuser = "0.17"
libc = "0.2.189"
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.27.0"
