[package]
name = "afs-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-core = { version = "0.1.0", path = "../afs-core" }
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
async-recursion = "1.1.1"
flate2 = "1.0.35"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
