[package]
name = "afs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
anyhow = "1.0.104"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
tempfile = "3.27.0"
