[package]
name = "afs-nfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
async-trait = "0.1.91"
nfsserve = "0.11.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tempfile = "3.27.0"
nfsserve = "0.11.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "net"] }
