[package]
name = "afs-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for afs (agent filesystem)"

[lib]
name = "afs"
# cdylib -> the importable Python extension module; rlib -> lets the workspace
# build/test it against a real libpython (extension-module is maturin-only).
crate-type = ["cdylib", "rlib"]

[dependencies]
afs-core = { version = "0.1.0", path = "../afs-core" }
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
afs-fuse = { version = "0.0.0", path = "../afs-fuse" }
afs-nfs = { version = "0.0.0", path = "../afs-nfs" }
fuser = "0.17"
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }

[features]
# Enabled only when building the wheel (see pyproject.toml). Off during
# `cargo build/test`, so pyo3 links libpython and the workspace suite works.
extension-module = ["pyo3/extension-module"]
