[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "afs"
description = "Python bindings for afs (agent filesystem): async workspace ops, attribution, suggestions, and mount/NFS orchestration"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.optional-dependencies]
# For the FastAPI example under examples/.
fastapi = ["fastapi", "uvicorn"]

[tool.maturin]
# Build the importable extension module (pyo3 resolves libpython at import).
features = ["extension-module"]
# Ship type information next to the compiled module.
include = ["afs.pyi", "py.typed"]
