[package]
name = "afs-remote-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

# git invokes a helper named exactly `git-remote-<transport>` off PATH.
[[bin]]
name = "git-remote-afs"
path = "src/main.rs"

[dependencies]
afs-git = { version = "0.0.0", path = "../afs-git" }
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
anyhow = "1.0.104"
libc = "0.2.176"
tokio = { version = "1.53.1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
