[package]
name = "afs-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
afs-sdk = { version = "0.1.0", path = "../afs-sdk" }
anyhow = "1.0.104"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "fs", "process"] }

[dev-dependencies]
tempfile = "3.27.0"
