[package]
name = "origo-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "origo"
path = "src/main.rs"

[dependencies]
origo-api = { version = "0.0.0", path = "../origo-api" }
origo-fuse = { version = "0.0.0", path = "../origo-fuse" }
origo-git = { version = "0.0.0", path = "../origo-git" }
origo-mcp = { version = "0.0.0", path = "../origo-mcp" }
origo-nfs = { version = "0.0.0", path = "../origo-nfs" }
origo-sandbox = { version = "0.0.0", path = "../origo-sandbox" }
origo-sdk = { version = "0.1.0", path = "../origo-sdk" }
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "time"] }
