[package]
name = "origo-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

# git invokes a helper named exactly `git-remote-<transport>` off PATH; the
# `git-remote-origo` binary lives here alongside the git object/import/export code
# it drives (it was formerly the standalone `origo-remote-git` crate).
[[bin]]
name = "git-remote-origo"
path = "src/bin/git-remote-origo.rs"

[dependencies]
origo-core = { version = "0.1.0", path = "../origo-core" }
origo-sdk = { version = "0.1.0", path = "../origo-sdk" }
async-recursion = "1.1.1"
flate2 = "1.0.35"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
# used by the git-remote-origo binary
anyhow = "1.0.104"
libc = "0.2.176"
tokio = { version = "1.53.1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
