[package]
name = "origo-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for origo (agent filesystem)"

[lib]
# The extension is imported as `origo._origo` (mixed layout: pure-Python `origo`
# package under python/, compiled core as its `_origo` submodule).
name = "_origo"
# cdylib -> the importable Python extension module; rlib -> lets the workspace
# build/test it against a real libpython (extension-module is maturin-only).
crate-type = ["cdylib", "rlib"]

[dependencies]
origo-core = { version = "0.1.0", path = "../origo-core" }
origo-sdk = { version = "0.1.0", path = "../origo-sdk" }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "sync"] }
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }

# FUSE mount + NFS serving are Unix-only; gating them here lets the extension
# build on Windows (exposing the portable surface: files, versioning,
# attribution, suggestions, the feed, and every backend). The mount/serve_nfs
# methods raise a clear error on platforms without them.
[target.'cfg(unix)'.dependencies]
origo-fuse = { version = "0.0.0", path = "../origo-fuse" }
origo-nfs = { version = "0.0.0", path = "../origo-nfs" }
fuser = "0.17"

[features]
# Enabled only when building the wheel (see pyproject.toml). Off during
# `cargo build/test`, so pyo3 links libpython and the workspace suite works.
extension-module = ["pyo3/extension-module"]
